Revision history for PostgreSQL extension semver.
0.23.0


0.22.0  2020-04-02T14:13:55Z
      - Fixed `get_semver_prerelease()` so that it returns only the
        prerelease without any build metadata. For example, for
        `1.0.0-1.2+1.02`, it will now return `1.2`, not `1.2+1.02`. Thanks
        to Artur Troian for the report (#41) and fix (#42)!

0.21.0  2020-03-21T21:56:20Z
      - Fixed build metadata part to allow leading zeros. In other words,
        `1.0.0-1.02` is not a legitimate semver, because it has a leading zero
        in a numeric part of the prerelease version. `1.0.0-1.2+1.02`, however,
        is valid, because the leading zero numeric expression is in the build
        metadata part, which does not evaluate as numeric, and so is allowed.
        This fix allows source code hashes, for example, to be used in build
        metadata. Thanks to Artur Troian for the report (#38) and fix (#39)!

0.20.3  2018-11-10T19:32:26Z
      - Fixed test failure on Postgres 11 due to a renamed column that this
        extension doesn't even use for testing.

0.20.2  2018-10-19T02:05:11Z
      - Fix Makefile bug that installed the version script with the release
        version instead of the extension version. Thanks again to
        @ninjaslikecheese for the report (#33).

0.20.1  2018-10-18T00:30:04Z
      - Properly incremented version to v0.20.0 in the spec file and docs.
        Thanks to @ninjaslikecheese for the report (#32).

0.20.0  2018-10-17T12:59:22Z
      - Fixed file name in the v0.17.0 upgrade script.
      - Added the semverrange type.
      - Increased the minimum required version of PostgreSQL to 9.2 for range
        type support.
      - Fixed the `Makefile` so it properly installs `semver.sql`. Thanks to
        Matej Marušák for the report (Issue #31).

0.17.0  2017-05-07T07:15:25Z
      - Fixed potential memory leak in is_semver function. Thanks to
        Arun Tejasvi Chaganty (Issue #29).

0.16.0  2016-12-04T00:51:19Z