@@ -1,5 +1,5 @@
 \set ECHO none
-1..296
+1..298
 ok 1 - Type semver should exist
 ok 2 - semvers should be NULLable
 ok 3 - "1.2.2" is a valid semver
@@ -296,3 +296,5 @@ ok 293 - 2.0.0 should not be in range [1.0.1, 2.0.0)
 ok 294 - 1.9999.9999 should be in range [1.0.1, 2.0.0)
 ok 295 - 1000.0.0 should be in range [1.0.0,)
 ok 296 - Should be able to work with arrays of semverranges
+ok 297 - Should properly format a 32 character semver
+ok 298 - Should properly format a 33 character semver
